Refactorización puntaje y Player